<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_anim"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532"
        tools:ignore="ContentDescription" />


    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/raleway_medium"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onClick"
        android:text="@string/_4th_fact"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/raleway_medium"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onClick"
        android:text="@string/fifthfact"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/raleway_medium"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="@string/firstfact"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/raleway_medium"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="@string/secfact"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/raleway_medium"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onClick"
        android:text="@string/thirdfact"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/home_button"
        android:fontFamily="@font/raleway_medium"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="@string/popularity_calculator"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


</android.support.constraint.ConstraintLayout>