<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".FourthActivity">


    <TextView
        android:id="@+id/brain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#D3CFCF"
        android:fontFamily="@font/raleway_thin"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/smile_more"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/firstView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha=".7"
        android:background="@drawable/body"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:text="@string/firstfactbody"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brain">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/facts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/raleway_medium"
                android:paddingEnd="0dp"
                android:paddingStart="8dp"
                android:text="@string/smile_facts"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>




    <ImageView
        android:id="@+id/buttonHome"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="8dp"
        android:onClick="animate"
        app:srcCompat="@drawable/icon_animation"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstView"
        tools:ignore="ContentDescription" />


</android.support.constraint.ConstraintLayout>